update
git-svn-id: http://svn.code.sf.net/p/itsucks/code/trunk@213 540001c9-3a26-0410-bb9e-87544be22eba